@@ -253,7 +253,7 @@ Portions Copyright (c) 2018, 2020, Chris Fraire <cfraire@me.com>.
                     <argLine>
                         @{surefireArgLine}
                         -Djna.nosys=true
-                        --illegal-access=permit
+
                         --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                         --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                         --add-exports java.base/sun.nio.ch=ALL-UNNAMED
